Fix wrapping issue in the css

--- a/assets/css/fyne-apps.webflow.css
+++ b/assets/css/fyne-apps.webflow.css
@@ -278,7 +278,7 @@
   padding: 0;
   font-weight: normal;
   text-align: left;
-  white-space: wrap;
+  white-space: normal;
 }
 
 .button {
